[tool.poetry]
name = "url_shortener_django"
version = "0.1.0"
description = "A small project to create short vesrion of long urls."
authors = ["Paweł Kordowski"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.5"
djangorestframework = "3.13.1"
psycopg2 = "2.9.3"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-django = "4.5.2"
black = "22.3.0"
isort = "5.10.1"
flake8 = "4.0.1"
factory-boy = "3.2.1"
ipython = "8.4.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
